--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://hugo-profile.netlify.app"
+baseURL: "https://fatihemreozturk.netlify.app/"
 languageCode: "en-us"
 title: "feo"
 theme: "hugo-profile"
