--- a/config.yaml
+++ b/config.yaml
@@ -223,7 +223,7 @@ params:
       ### SKILLS
     skills:
       enable: true
-      #title: "Here are a few technologies I've been working with recently:"
+      title: "Here are a few technologies I've been working with recently:"
       content: "My skills are:"
       items:
         - "Python"
@@ -261,6 +261,25 @@ params:
           url: ""
         date: "2012 - 2019"
         content: 
+  # Experience
+  experience:
+    enable: true
+    # title: "Custom Name"
+    index: false
+    items:
+      - title: "Data Scientist"
+        firm:
+          name: "Financial Preediction AI"
+          url: ""
+        date: "April 2024 - Still"
+        
+      
+      - title: "Subtitle Translator/Editor"
+        firm:
+          name: "Private Contractor"
+          url: ""
+        date: "Sep 2021 - Feb 2022"
+        content: 
 
 
   # Achievements
@@ -284,39 +303,22 @@ params:
 
   # projects
   projects:
-    enable: false
+    enable: true
     # title: "Custom Name"
     items:
-      - title: Hugo Profile
+      - title: Examining Prefrontal Oxygenation Parameter in Migraine Classification
         content: A highly customizable and mobile first Hugo template for personal portfolio and blog.
-        image: /images/projects/profile.png
+        image: My tasks included data cleaning, feature extraction, feature reduction, and building machine learning pipelines. We carried out this study in coordination with the Department of Statistics and the Department of Biophysics at Dokuz Eylul University. 
         featured:
-          name: Demo
-          link: https://hugo-profile.netlify.app
-        badges:
-          - "Hugo"
-          - "Bootstrap"
-          - "Javascript"
-        links:
-          - icon: fa fa-envelope
-            url: mailto:?subject=Hugo%20Profile%20Template&body=Check%20it%20out:%20https%3a%2f%2fhugo-profile.netlify.app%2fblog%2fmarkdown-syntax%2f
-          - icon: fab fa-github
-            url: https://github.com/gurusabarish/hugo-profile
-          - icon: fab fa-twitter
-            url: https://twitter.com/intent/tweet?text=Check+it+out:&url=https%3A%2F%2Fgithub.com%2Fgurusabarish%2Fhugo-profile
+          name: 
+          link: 
 
-      - title: Image Converter
-        content: A web app to convert image to pdf, png to jpg, png to jpg and png to webp without database using django.
-        image: /images/projects/converter.jpg
-        featured:
-          name: Demo
-          link: https://django-converter.herokuapp.com
-        badges:
-          - "Django"
-          - "Bootstrap"
+
+      - title: Comparison of the methods to determine optimal number of clusters
+        content: In this project, I compared the methods to determine optimal number of clusters(Average Silhouette, Calinski-Harabasz, Davies-Bouldin, and Dunn Index) on nine different data sets. I tested which method works better in which cases and for which types of data sets they fail. This study was published in 'Veri Bilimi', a national peer-reviewed journal.
         links:
-          - icon: fab fa-github
-            url: https://github.com/gurusabarish/converter
+          - icon: 
+            url: https://github.com/ozturkfemre/optimal_k
 
       - title: Hugo Profile V2
         content: A clean and simple Hugo template for personal portfolio and blog.
