--- a/config.yaml
+++ b/config.yaml
@@ -181,20 +181,65 @@ params:
       
       ### SKILLS
       
-      - Programming: 
-      Python, R, Sql, Bash, Git, Google Sheets, JavaScript
-      - Documentation: 
-      Microsoft PowerPoint, Microsoft Word, Markdown, Obsidian, Google Docs, Google Slides
-      - Data Management: 
-      MongoDB, DBBrowser
-      - Statistical Analysis: 
-      A/B Tests, RFM, KPIs, Hypothesis Testing, Anomaly Detection, Ethics and Privacy Awareness, Pandas(Python), Numpy(Python), Tidyverse(R), d3(JavaScript), Financial Analysis 
-      - Machine Learning: 
-      Regression, Classification, Clustering, Artificial Neural Networks, Tensorflow(Python), Sklearn(Python), PyTorch(Python)
-      - Data Visualization/Storytelling: 
-      Matplotlib(Python), Seaborn(Python), Plotnine(Python), Plotly(Python), Ggplot(R), Shiny(R) 
-      - Soft Skills:
-      Identifying & Solving Problems, Researching, Mentoring/Supervising, Report Writing, Project Management, Attention to Details, Workflow Development 
+      ##### Programming: 
+      - Python
+      - R
+      - Sql
+      - Bash
+      - Git
+      - Google Sheets
+      - JavaScript
+      
+      ##### Documentation: 
+      - Microsoft PowerPoint
+      - Microsoft Word
+      - Markdown
+      - Obsidian
+      - Google Docs
+      - Google Slides
+      
+      ##### Data Management: 
+      - MongoDB
+      - DBBrowser
+      
+      ##### Statistical Analysis: 
+      - A/B Tests
+      - RFM
+      - KPIs
+      - Hypothesis Testing
+      - Anomaly Detection
+      - Ethics and Privacy Awareness
+      - Pandas(Python)
+      - Numpy(Python)
+      - Tidyverse(R)
+      - d3(JavaScript)
+      - Financial Analysis 
+      
+      ##### Machine Learning: 
+      - Regression
+      - Classification
+      - Clustering
+      - Artificial Neural Networks
+      - Tensorflow(Python)
+      - Sklearn(Python) 
+      - PyTorch(Python)
+      
+      ##### Data Visualization/Storytelling: 
+      - Matplotlib(Python)
+      - Seaborn(Python)
+      - Plotnine(Python)
+      - Plotly(Python)
+      - GGplot(R)
+      - Shiny(R) 
+      
+      ##### Soft Skills:
+      - Identifying & Solving Problems
+      - Researching
+      - Mentoring/Supervising
+      - Report Writing
+      - Project Management
+      - Attention to Details
+      - Workflow Development 
       
             
       ------------------------------------------------------------------------
@@ -216,20 +261,21 @@ params:
       
       ### ACADEMIC SERVICE
       
-      Artificial Intelligence Symposium \| Mar 2015 \| Organizing Committee Member of the Bilkent University Philosophy Society
-      DSM 5008 Unsupervised Statistical Learning Course \| May 24, 2023 \| Guest Lecturer | Dokuz Eylul University
+      - Artificial Intelligence Symposium \| Mar 2015 \| Organizing Committee Member of the Bilkent University Philosophy Society
+      - DSM 5008 Unsupervised Statistical Learning Course \| May 24, 2023 \| Guest Lecturer | Dokuz Eylul University
       
       ------------------------------------------------------------------------
       
       ### CONFERENCES
       
-      Oral talk titled "Comparison of the methods to determine the optimal number of clusters" \| Dec 2, 2022 \| Dokuz Eylul University International Graduate Research Symposium
+      - Oral talk titled "Comparison of the methods to determine the optimal number of clusters" \| Dec 2, 2022 \| Dokuz Eylul University International Graduate Research Symposium
       
-      Participation \| Jun 20-23, 2022 \| Virtual \| useR! 2022
+      - Participation \| Jun 20-23, 2022 \| Virtual \| useR! 2022
       
       ------------------------------------------------------------------------
       
       ### AWARDS
+      
       - Full Scholarship 2012-2019 Bilkent University
       - Honor, 2014 Bilkent University
       - Honor, 2014 Bilkent University
@@ -239,6 +285,7 @@ params:
       ------------------------------------------------------------------------
       
       ### PUBLICATIONS
+      
       Öztürk, F. E. and Demirel, N. (2023). Comparison of the methods to determine optimal number of clusters. Veri Bilimi Derg 6 (1) , 34-45
       
       
@@ -247,7 +294,7 @@ params:
       ### Technical Training:
       
       
-      #### University courses
+      ##### University courses
       - Calculus I & Calculus II \| Sep 2013 & Jan 2014
       - Introduction to Computing and Programming \| Jan 2014 
       - Introduction to Probability and Statistics \| Jun 2014
@@ -259,7 +306,7 @@ params:
       - Probability and Statistics for Data Science \| Sep 2022
       
       
-      #### Online courses
+      ##### Online courses
       - Python for Data Science and Artificial Intelligence \| Udemy\| Nov 2021
       - Python for Data Science and Machine Learning Bootcamp \| Udemy \| Dec 2021
       - Data Management with SQL for Social Scientists \| Data Carpentry \| Nov 2021
