--- a/config.yaml
+++ b/config.yaml
@@ -159,22 +159,24 @@ params:
      ------------------------------------------------------------------------
      
      ### EDUCATION
-     - Master of Science in Data Science | Dokuz Eylul University, İzmir/Turkey	
-     Feb 2022 — Aug 2023
-     Department of Statistics | Advisor: Neslihan Demirel
+     ##### Master of Science in Data Science | Dokuz Eylul University, İzmir/Turkey	
+     ###### Department of Statistics | Advisor: Neslihan Demirel
+     ####### Feb 2022 — Aug 2023
      
-     - Bachelor in Philosophy | Bilkent University, Ankara/Turkey
-     Sep 2012  —  Jan 2019
-     Department of Philosophy | Advisor: Bill Wringe
+     ##### Bachelor in Philosophy | Bilkent University, Ankara/Turkey
+     ###### Department of Philosophy | Advisor: Bill Wringe
+     ####### Sep 2012  —  Jan 2019
      
      ------------------------------------------------------------------------
      
      ### EXPERIENCE
-     - Data Scientist | FinancialPredictionAI, Remote	
-     April 2024 — Still
+     ##### Data Scientist at FinancialPredictionAI	
+     ###### April 2024 — Still
+     ####### Remote
      
-     - Subtitle Editor/Translator | Private Contractor,  Remote
-     Sep 2021  —  Feb 2022
+     ##### Subtitle Editor/Translator at Private Contractor
+     ###### Sep 2021  —  Feb 2022
+     ####### Remote
      
      ------------------------------------------------------------------------
       
