--- a/config.yaml
+++ b/config.yaml
@@ -172,11 +172,11 @@ params:
      ### EXPERIENCE
      ##### Data Scientist at FinancialPredictionAI	
      ###### April 2024 — Still
-     ####### Remote
+     ###### Remote
      
      ##### Subtitle Editor/Translator at Private Contractor
      ###### Sep 2021  —  Feb 2022
-     ####### Remote
+     ###### Remote
      
      ------------------------------------------------------------------------
       
