--- a/config.yaml
+++ b/config.yaml
@@ -161,11 +161,11 @@ params:
      ### EDUCATION
      ##### Master of Science in Data Science | Dokuz Eylul University, İzmir/Turkey	
      ###### Department of Statistics | Advisor: Neslihan Demirel
-     ####### Feb 2022 — Aug 2023
+     ###### Feb 2022 — Aug 2023
      
      ##### Bachelor in Philosophy | Bilkent University, Ankara/Turkey
      ###### Department of Philosophy | Advisor: Bill Wringe
-     ####### Sep 2012  —  Jan 2019
+     ###### Sep 2012  —  Jan 2019
      
      ------------------------------------------------------------------------
      
